--- a/BasicInformation/午前/セキュリティ.md
+++ b/BasicInformation/午前/セキュリティ.md
@@ -1,16 +1,317 @@
 # セキュリティ
 
-BYOD(Bring Your Own Device)
+**BYOD(Bring Your Own Device)**
 従業員が個人的に所有するPCやスマートフォンなどの情報端末を職場に持ち込み、それを業務に使用することを意味します。
 
 
-楕円曲線暗号
+**公開鍵暗号方式**
+暗号化して送信することは誰でもできるが、暗号化された内容を復号できるのは正規の受信者だけという特徴をもつ暗号方式。
+
+
+**共通鍵暗号方式**
+公開鍵より処理時間が短い。  
+
+
+**楕円曲線暗号**
 楕円曲線の点の演算を用いた公開鍵暗号方式です。  
 RSAと並ぶ公開鍵暗号方式。  
 
 RSA暗号と比べて，短い鍵長で同レベルの安全性が実現できる。
 →
 正しい。楕円曲線暗号の特徴です。RSAの鍵長2,048ビットで実現できる暗号強度を、楕円曲線暗号では鍵長224ビットで実現できます。
+
+
+
+JIS Q 27000:2014(情報セキュリティマネジメントシステム)
+
+・信頼性
+意図する行動と結果が一巻しているという特性
+
+・真正性
+エンティティはそれが主張する通りの物であるという特性
+
+・可用性
+アクセス及び使用が可能であるという特性
+
+・機密性
+
+
+
+
+**SPF(Sender Policy Framework)**
+SMTP接続してきたメールサーバのIPアドレスをもとに、正規のサーバから送られた電子メールかどうかを検証する技術です。  
+受信メールサーバ側にて電子メールの送信元ドメインが詐称されていないかを検査できます。  
+
+
+
+**リスクアセスメント(Risk Assessment)**  
+リスクの特定、分析、評価
+リスクマネジメントにおける「リスクの特定」から「リスクの評価」までの一連の活動です。  
+発見されたリスクのすべてに対策を行うことは現実的ではないので、通常はリスクに優先順位をつけて対応を行います。  
+リスクが顕在化した場合の損害額と、そのリスクが発生する確率を勘案して優先度の根拠となるリスクレベルの決定を行うのがリスク分析です。  
+
+Assetは資産。資産から連想できるものもだいぶ答えに近い。  
+
+
+
+**ディジタル署名**
+公開鍵暗号方式を使ってディジタル文書の正当性を保証する技術。
+この仕組みによって「発信者が正当であるか」と「改ざんの有無」の2点を確認できる。
+改ざんの検知はできるが、改ざん部位の特定および訂正機能はもたない。
+
+1.送信者は秘密鍵を使って書名を作成
+2.受信者は送信者の公開鍵を使って書名を復号
+3.復号した平文をハッシュ関数に通してメッセージダイジェストを生成
+4.復号した書名のメッセージダイジェストを比較する。
+　一致したら送信者の正当性と改ざん無しを保障できる。
+
+送信者が秘密鍵を使って署名を作成し，それをメッセージに付加することによって，受信者が送信者を確認できるようにする。
+
+アプリケーションソフトウェアにディジタル署名を施す事もあるらしい。  
+その目的は改ざんの検出。  
+
+
+
+**PKI(Public Key Infrastructure)**
+「公開鍵暗号方式」と呼ばれる暗号化のやり方と「電子証明書」と呼ばれるものを使って、あれやこれやすることで、通信の安全性を高める仕組み
+公開鍵が正当な送信者の物であることを保証する仕組み。
+
+1.秘密鍵所有者は認証局(CA)に公開鍵と身分証明書を提出して発行を依頼する
+2.認証されたらディジタル証明書が発行される。(公開鍵、所有者情報、認証局のディジタル書名)
+3.クライアントにディジタル証明書を送る
+4.クライアントは**認証局の公開鍵**で復号してディジタル証明書中の秘密鍵の保持者の情報と公開鍵を入手し、認証局の署名を確認する。
+
+
+
+**SSL(Secure Socket Layer)**
+暗号化と認証の機能を提供するプロトコル。
+一番最初に公開鍵暗号方式でサーバーとクライアントが共通鍵をやり取りして、以降共通鍵で通信する方式。
+
+1.Webサーバーは公開鍵の正当性を証明するために認証局(CA)に登録申請をする。
+2.認証局はWebサーバーに対してサーバー証明書(ディジタル証明書)を発行し、サーバーは認証を受ける。
+3.WebクライアントがWebサーバーに接続すると、Webサーバーは認証局の署名付きサーバー証明書を返信する。
+4.Webクライアントは認証局の署名の確認を行い、サーバー証明書が本物であることを確認する。
+5.正当性が証明された後、Webクライアントは暗号化鍵の基となる乱数を発生させ、それをサーバー証明書に組み込まれたWebサーバーの公開鍵で暗号化してWebサーバーに送る。
+6.Webサーバーは秘密鍵で暗号化された乱数を復号する。
+7.WebサーバーとWebクライアントでマスターシークレット(MS)と呼ばれる鍵を生成し、このMSから生成した共通鍵を使って暗号化通信を行う。
+
+
+
+**IPsec(IP Security)**
+IP(Internet Protocol)を拡張してセキュリティを高めたプロトコル。
+改ざんの検知、通信データの暗号化、送信元の認証などの機能をOSI基本参照モデルのネットワーク層レベル(TCP/IPモデルではIP層)で提供します。
+IPsecを用いれば上層のアプリケーションに依存せずに暗号化通信を行えるため、VPNの構築に利用されます。
+IPsecはプロトコル群の総称であり、認証、暗号化、鍵交換などの複数のプロトコルを含みます。
+そのうち、認証を担うプロトコルがAH(Authentication Header)、認証と暗号化を担うプロトコルがESP(Encapsulated Security Payload)です。
+
+
+**S/MIME**
+Secure MIMEの略。
+公開鍵暗号技術を使用して「認証」「改ざん検出」「暗号化」などの機能を電子メールソフトに提供する規格です。
+
+
+**SMTP-AUTH**
+送信側のメールサーバで送信者を認証する仕組みです。
+
+
+**SSH**
+Secure Shellの略。
+公開鍵暗号や認証の技術を利用して、安全にリモートコンピュータと通信するためのプロトコルです。
+
+
+
+**2要素認証**
+ICカードとパスワード、指紋とパスワードなどのように、利用者が知っている・持っている・有している情報のうち2種類の要素を使用して認証を行う方式です。
+2段階で認証を行うのでセキュリティを高めることができますが、認証システムの導入コストが掛かることや認証のプロセスが煩雑になるデメリットもあります。
+
+
+
+**SMTP(Simple Mail Transfer Protocol)**
+電子メールを転送するプロトコル。
+通信にTCP/25ポートを使用します。
+
+まさか110番と25番を間違えるとはね。
+OP25Bって言うじゃない。
+
+
+**POP(Post Office Protocol)**
+メール受信プロトコル。
+TCP/110ポートを使用。
+
+
+
+**WPA3(Wi-Fi Protected Access 3)**
+→
+無線LANのセキュリティ規格
+→
+無線LANのセキュリティプロトコルWPA2の後継となる次期バージョンです。
+WPA2には2017年11月に「KRACKs」と呼ばれる4ウェイハンドシェイク時における深刻な脆弱性が見つかっており、
+翌2018年に発表されたWPA3ではセキュリティのさらなる強化が図られています。
+具体的には、管理フレーム暗号化を行うPMF機能の使用を必須とするほか、パーソナルモード、エンタープライズモードそれぞれで変更が行われています。
+
+
+**タイムスタンプサービス**  
+→  
+電子データが，ある日時に確かに存在していたこと，及びその日時以降に改ざんされていないことを証明するサービス  
+→
+対象の電子データのハッシュ値と、信頼できる第三者機関である時刻認証局(TSA:Time Stamp Authority)が発行する時刻情報を含んだ電子データです。
+検証時には、電子データのハッシュ値とタイムスタンプ内のハッシュ値の比較により、付与時点での「存在性」および、その時刻以後の「完全性」を確認できます。
+
+
+
+**セキュリティバイデザイン**  
+→  
+システムの企画・設計段階からセキュリティを確保する方策のことである。  
+割と言葉のままではある。  
+
+
+**MDM(Mobile Device Management，携帯端末管理)**
+
+会社や団体が，自組織の従業員に貸与するスマートフォンに対して，セキュリティポリシに従った一元的な設定をしたり，
+業務アプリケーションを配信したりして，スマートフォンの利用状況などを一元管理する仕組み
+
+
+**ルートキット(rootkit)**
+サーバにバックドアを作り，サーバ内で侵入の痕跡を隠蔽するなどの機能がパッケージ化された不正なプログラムやツール
+
+
+
+**C&C(コマンド&コントロール)サーバ**
+攻撃者がマルウェアに対して指令となるコマンドを送信し、マルウェアが仕掛けられたコンピュータの動作を制御するために用いられる外部の指令サーバです。
+
+
+
+レインボー攻撃
+ハッシュ関数を通す。
+
+パスワードリスト攻撃
+パスワードの使いまわしを突く。
+
+
+**TKIP(Temporal Key Integrity Protocol)**
+無線ネットワーク規格で使われているセキュリティプロトコルです。
+使用する鍵を一定時間ごとに更新することで暗号解読に対する耐性を高めた方式です。
+
+
+
+**CDN(Contents Delivery Network)**
+Webサイトのコンテンツをキャッシュし，本来のサーバに代わってコンテンツを利用者に配信することによって，ネットワークやサーバの負荷を軽減する。
+
+
+
+コンペア法
+感染前のファイルと感染後のファイルを比較し，ファイルに変更が加わったかどうかを調べてウイルスを検出する。
+
+パターンマッチング方式
+ウイルスが持つ特徴的なコードをパターン(シグネチャコード)としてデータベース化し、それと検査対象のファイルを比較することでウイルスの検出を試みます。
+既知ウイルスのシグネチャと比較して，ウイルスを検出する。
+
+ビヘイビア法
+システム内でのウイルスに起因する異常現象を監視することによって，ウイルスを検出する。
+
+チェックサム法
+ファイルのチェックサムと照合して，ウイルスを検出する。
+
+動的解析
+サンドボックス上でプログラムを実際に動作させてその挙動を監視し、その動作を解析すること
+
+静的解析
+逆アセンブルしたプログラムの命令列を直接読んで、どのような動作をするか解析すること
+
+
+
+**ディジタルフォレンジクス**
+不正アクセスや情報漏えいなどのセキュリティインシデントの発生時に、
+原因究明や法的証拠を明らかにするために対象となる電子的記録を収集・解析することです。
+
+
+
+**CAPTCHA**
+人間には読み取ることが可能でも，プログラムでは読み取ることが難しいという差異を利用して，
+ゆがめたり一部を隠したりした画像から文字を判読させ入力させることで，人間以外による自動入力を排除する技術。
+
+
+
+**ファジング(fuzzing)**
+検査対象のソフトウェア製品に「ファズ（英名：fuzz）」と呼ばれる問題を引き起こしそうなデータを大量に送り込み、
+その応答や挙動を監視することで(未知の)脆弱性を検出する検査手法。
+
+
+
+**SIEM(Security Information and Event Management)(セキュリティ情報およびイベント管理)**
+複数のログデータを相関分析し，不正アクセスを検知できる。
+OS、データベース、アプリケーション、ネットワーク機器など多様なソフトウェアや機器が出力する大量のログデータを分析し、
+異常があった場合に管理者に通知したり対策を知らせたりする仕組み。
+
+
+**ソーシャルエンジニアリング(Social Engineering)**
+技術的な方法ではなく、人の心理的な弱みやミスに付け込んでパスワードなどの秘密情報を不正に取得する行為の総称。
+
+なりすまし
+管理者や関係者になりすまして秘密情報を不正取得する
+
+ショルダーハッキング
+モニター画面やキーボード操作を利用者の背後から盗み見て、ログイン情報等を不正取得する
+
+トラッシング（スカベンジング）
+ゴミ箱に捨てられているメモや書類を漁って秘密情報を不正取得する
+
+のぞき見
+FAXやプリンタに残された印刷物、オフィス内のメモ・付箋、机の上に放置された書類等から秘密情報を不正取得する
+
+
+**トロイの木馬**
+一見正常に動作しているように見えますが、実際には裏でユーザのキーストロークを盗んだり、
+バックドアとして機能したりするように巧妙につくりかえられたプログラムのこと。
+
+
+---
+
+
+組織的なインシデント対応体制の構築や運用を支援する目的でJPCERT/CCが作成したものはどれか
+→
+CSIRTマテリアル
+組織的なインシデント対応体制である「組織内CSIRT」の構築を支援する目的で作成されたガイドラインです。
+構想フェーズ、構築フェーズ、運用フェースの3部構成になっていて、ITセキュリティに対応するための情報およびノウハウが提示されています
+
+ISMSユーザーズガイド
+ISMS認証基準(JIS Q 27001:2014)の要求事項について一定の範囲でその意味するところを説明しているガイドです。JIPDECによって作成されています。
+
+組織における内部不正防止ガイドライン
+組織が管理する情報と情報システムに対する内部不正の防止、および不正行為発生時の早期発見と拡大防止のための体制の整備を推進するための指針です。
+IPAによって作成されています。
+
+
+
+Webシステムのパスワードを忘れたときの利用者認証において合い言葉を使用する場合，合い言葉が一致した後の処理のうち，セキュリティ上最も適切なものはどれか。
+→
+あらかじめ登録された利用者のメールアドレス宛てに，パスワード再登録用ページヘアクセスするための，推測困難なURLを送信する。
+新しくメールアドレスを入力させる方法は悪手。
+攻撃者が任意のメールアドレスを入力で来てしまうため。
+
+
+
+**LANアナライザ**
+LAN上を通過するパケットを監視したり記録するためのハードウェアまたはソフトウェアのことです。
+LANアナライザが悪用されると盗聴などの被害をもたらす危険があるので慎重な管理が求められます。
+
+
+
+**不正のトライアングル**
+不正行動は「動機・プレッシャー」「機会」「正当化」の3要素がすべて揃った場合に発生するという理論
+
+動機・プレッシャー
+自己の欲求の達成や問題を解決するためには不正を行うしかないという考えに至った心情のこと。
+例えば、「過大なノルマ」、「個人的に金銭的問題がある」という心情が、これに当てはまる。
+
+機会
+不正を行おうと思えばいつでもできるような職場環境のこと。
+例えば、「悪用可能なシステムの不備が存在する」、「チェックする人がいない」「やってもばれない」という職場環境が、これに当てはまる。
+
+正当化
+自分に都合の良い理由をこじつけて、不正を行う時に感じる「良心の呵責（かしゃく）」を乗り越えてしまうこと。
+例えば、「組織のためであり、悪いことではない」、「自分のせいではない、組織・制度が悪い」「職場で不遇な扱いを受けている」
+等の身勝手な言い訳（罪悪感からの逃避や責任転嫁）が、これに当てはまる。
 
 
 
@@ -27,77 +328,6 @@ JIS Q 27000:2014(情報セキュリティマネジメントシステム－用語
 ISMS適合性評価制度の説明はどれか。
 →
 JIS Q 27001に基づき，組織が構築した情報セキュリティマネジメントシステムの適合性を評価する。
-
-
-
-SPF(Sender Policy Framework)の仕組みはどれか。
-→
-SMTP接続してきたメールサーバのIPアドレスをもとに、正規のサーバから送られた電子メールかどうかを検証する技術です。  
-受信メールサーバ側にて電子メールの送信元ドメインが詐称されていないかを検査できます。  
-
-
-
-リスクアセスメント(Risk Assessment)  
-リスクマネジメントにおける「リスクの特定」から「リスクの評価」までの一連の活動です。  
-発見されたリスクのすべてに対策を行うことは現実的ではないので、通常はリスクに優先順位をつけて対応を行います。  
-リスクが顕在化した場合の損害額と、そのリスクが発生する確率を勘案して優先度の根拠となるリスクレベルの決定を行うのがリスク分析です。  
-
-Assetは資産。
-
-
-
-ディジタル署名
-公開鍵暗号方式を使ってディジタル文書の正当性を保証する技術。
-この仕組みによって「発信者が正当であるか」と「改ざんの有無」の2点を確認できる。
-改ざんの検知はできるが、改ざん部位の特定および訂正機能はもたない。
-
-1.送信者は秘密鍵を使って書名を作成
-2.受信者は送信者の公開鍵を使って書名を復号
-3.平文→ハッシュ関数→メッセージダイジェスト。
-　復号した書名のメッセージダイジェストを比較して一致したら送信者の正当性と改ざん無しを保障できる。
-
-送信者が秘密鍵を使って署名を作成し，それをメッセージに付加することによって，受信者が送信者を確認できるようにする。
-
-
-
-IPsec(IP Security)
-IP(Internet Protocol)を拡張してセキュリティを高めたプロトコル。
-改ざんの検知、通信データの暗号化、送信元の認証などの機能をOSI基本参照モデルのネットワーク層レベル(TCP/IPモデルではIP層)で提供します。
-IPsecを用いれば上層のアプリケーションに依存せずに暗号化通信を行えるため、VPNの構築に利用されます。
-IPsecはプロトコル群の総称であり、認証、暗号化、鍵交換などの複数のプロトコルを含みます。
-そのうち、認証を担うプロトコルがAH(Authentication Header)、認証と暗号化を担うプロトコルがESP(Encapsulated Security Payload)です。
-
-
-S/MIME
-Secure MIMEの略。公開鍵暗号技術を使用して「認証」「改ざん検出」「暗号化」などの機能を電子メールソフトに提供する規格です。
-
-
-SSH
-Secure Shellの略。公開鍵暗号や認証の技術を利用して、安全にリモートコンピュータと通信するためのプロトコルです。
-
-
-
-2要素認証
-ICカードとパスワード、指紋とパスワードなどのように、利用者が知っている・持っている・有している情報のうち2種類の要素を使用して認証を行う方式です。
-2段階で認証を行うのでセキュリティを高めることができますが、認証システムの導入コストが掛かることや認証のプロセスが煩雑になるデメリットもあります。
-
-
-
-SMTP(Simple Mail Transfer Protocol)
-電子メールを転送するプロトコル。
-通信にTCP/25ポートを使用します。
-
-まさか110番と25番を間違えるとはね。
-OP25Bって言うじゃない。
-
-
-POP(Post Office Protocol)
-メール受信プロトコル。
-TCP/110ポートを使用。
-
-
-
-
 
 
 
