--- a/C#/非同期系メモ.md
+++ b/C#/非同期系メモ.md
@@ -153,3 +153,25 @@ Dispatcherはキューを管理するクラス。
 この記事も面白い。  
 
 ---
+
+## 
+
+``` C#
+
+private void FUGA()
+{
+    async InnerMethod() {
+        await Task.Run(() => !_IsInitializing)
+            .ContinueWith(res => Messenger.Raise(new InteractionMessage("AccountNoFocusAction")));
+    }
+
+    Initialize();
+}
+
+private async void Initialize()
+{
+    _IsInitializing = true;
+    await HOGE();
+    _IsInitializing = false;
+}
+```
