--- a/BasicInformation/午前/3.ストラテジ系/1.システム戦略.md
+++ b/BasicInformation/午前/3.ストラテジ系/1.システム戦略.md
@@ -7,8 +7,7 @@
 **IT投資をその目的やリスクの特性ごとにカテゴライズし、**そのカテゴリごとに投資割合を管理することで、限りある経営資源を有効に配分することが可能になります。経済産業省が提唱するモデルでは「戦略目標達成型」「業務効率化型」「インフラ構築型」の3つのカテゴリに分類した後、いくつかの評価項目を用いて優先順位を決定します。
 
 **3C分析**
-3C分析は、マーケティング分析に必要不可欠な3要素、**顧客(Customer)**，**自社(Company)**，**競合他社(Competitor)**について自社の置かれている状況を分析する手法です。
-
+マーケティング分析に必要不可欠な3要素、**顧客(Customer)**，**自社(Company)**，**競合他社(Competitor)**について自社の置かれている状況を分析する手法です。
 
 **ベンチマーキング**
 自社の製品・サービス及びプロセスを定量的・定性的に測定し、それを業界で最も成功を収めている企業(ベスト企業)のものと比較しそのギャップを把握する分析手法です。
