--- a/BasicInformation/午前/3.ストラテジ系/3.経営戦略マネジメント.md
+++ b/BasicInformation/午前/3.ストラテジ系/3.経営戦略マネジメント.md
@@ -8,6 +8,47 @@ O･･･Opportunity(機会)
 T･･･Threat(脅威)
 4つの各単語の頭文字をとったもので、この中で強みと弱みは企業の内部要因、機会と脅威は外部環境要因に分類されます。
 
+競合他社に比べて高い生産効率
+強み(S)に分類されます。
+
+事業ドメインの高い成長率
+機会(O)に分類されます。
+
+低いマーケットシェア
+弱み(W)に分類されます。
+
+市場への強力な企業の参入
+脅威(T)に分類されます。
+
+
+**コア技術**
+長年の企業活動により蓄積され、市場競争力の源であると同時に企業経営の核となる技術のことです。
+大きな経済的利益を生み出し、希少性があり、模倣されにくいという3つの要素の特長を有する技術が、コア技術と言えるでしょう。
+
+コア技術をもつ企業は、市場において持続的な優位性をもつことができます。
+また企業が展開すべき方向性が明確になるので、選択と集中の戦略により効率のいい投資効果を得やすくなるメリットがあります。
+
+
+**コアコンピタンス(core competence)**
+長年の企業活動により蓄積された他社と差別化できる，または競争力の源となる企業独自のノウハウや技術のことをいいます。
+競争優位の源泉となる，他社よりも優越した自社独自のスキルや技術などの強みである。
+
+
+**ナレッジマネジメント**
+企業が保持している情報・知識、個人が持っているノウハウや経験などの知的資産を共有して、創造的な仕事につなげていく一連の活動で知識経営ともいわれます。
+文章や図表で説明・表現可能な知識（形式知）だけでなく、暗黙知を含めた幅広い知識を共有して活用することで、新たな知識を想像しながら経営を実践する経営手法です。
+
+企業内に散在している知識を共有化し，全体の問題解決力を高める経営を行う。
+
+形式知→暗黙知→表層
+
+
+**ベンチマーキング**
+自社の製品・サービス及びプロセスを定量的・定性的に測定し、それを業界で最も成功を収めている企業(ベスト企業)のものと比較しそのギャップを把握する企業経営で用いられる分析手法です。
+分析により明らかになったギャップを埋めるためにベスト企業のベストプラクティスを参考に業務改善を進めていきます。
+
+
+
 **バランススコアカード**
 企業のビジョンと戦略を実現するために、「財務」「顧客」「内部ビジネスプロセス」「学習と成長」という4つの視点から業績を評価・分析する手法です。
 
@@ -33,6 +74,29 @@ T･･･Threat(脅威)
 製品開発力の向上が目標であるので，製品開発領域の研修受講時間を指標とする。等
 
 
+**KPI(Key Performance Indicators,重要業績評価指標)**
+組織の達成目標（売上高など）に対して、目標達成度合いを評価する評価指標です。
+目標達成に向けたプロセスにおける達成度を把握し評価するための「中間目標」として非常に有効なのがKPIです。
+
+**KGI(Key Goal Indicator,重要目標達成指標)**
+事業戦略の遂行によって達成すべき到達目標
+KPIは目標を達成するための「過程」、KGIは「ゴール」にあたります。
+
+
+**バリューチェーン分析**
+業務を「購買物流」「製造」「出荷物流」「販売・マーケティング」「サービス」という5つの主活動と、「調達」「技術開発」「人事・労務管理」「全般管理」の4つの支援活動に分類し、製品の付加価値がどの部分（機能）で生み出されているかを分析する手法です。
+価値の連鎖を分析することによって競合他社と比較した自社の強みと弱みを明らかにしたり、業務の最適化を図ろうとする目的があります。「購買した原材料等に対して、各プロセスにて価値（バリュー）を付加していくことが企業の主活動である。」というコンセプトに基づいた考え方です。
+`企業の事業活動を機能ごとに主活動と支援活動に分け，企業が顧客に提供する製品やサービスの利益は，どの活動で生み出されているかを分析する手法`
+
+
+**3C分析**
+マーケティング分析に必要不可欠な3要素「顧客(Customer)」「自社(Company)」「競合他社Competitor」について自社の置かれている状況を分析する手法です。
+
+
+**ファイブフォース分析**
+業界の収益性を決める5つの競争要因から、業界の構造分析をおこなう手法のことです。「供給企業の交渉力」「買い手の交渉力」「競争企業間の敵対関係」という3つの内的要因と、「新規参入業者の脅威」「代替品の脅威」の2つの外的要因、計5つの要因から業界全体の魅力度を測ります。
+
+
 
 フィリップ・コトラーが提唱した競争地位戦略において、企業の業界地位は大きく次の4つに分けられます。
 
@@ -47,7 +111,7 @@ T･･･Threat(脅威)
 **ニッチャ**
 小さいながらも特定の市場で、独自の地位を築いている企業
 ニッチャ企業は、リーダやチャレンジャがカバーしきれない、特定のニーズ(需要)を持つ規模の小さい市場(ニッチ市場，隙間市場)をターゲットとして、新たなニーズの発掘や市場に特化したサービスの提供などを行うことで利益を確保しようとします。これをニッチ戦略といいます。
-製品，市場の専門特化を図る特定化戦略
+製品，**市場の専門特化を図る特定化戦略**
 
 **フォロワ**
 リーダやチャレンジャの戦略を模倣して、市場での地位を維持している企業
@@ -62,3 +126,157 @@ Product(製品) ↔ CustomerValue(顧客にとっての価値)
 Price(価格) ↔ Cost(顧客の負担)
 Place(場所) ↔ Convenience(顧客の利便性)
 Promotion(販売促進) ↔ Communication(顧客との対話)
+
+
+**アンゾフの成長マトリクス**
+経営学者のH・イゴール・アンゾフ（H. Igor Ansoff）が提唱したもので、縦軸に「市場」、横軸に「製品」をとり、それぞれに「既存」「新規」の2区分を設け、
+4象限(市場浸透，製品開発，市場開拓，多角化)のマトリクスとしたものです。
+事業が成長・発展できる経営戦略を検討するために適したフレームワークです。
+
+         | 既存製品 | 新規製品
+既存市場 | 市場浸透 | 製品開発
+新規市場 | 市場開拓 |   多角化
+
+
+**ポートフォリオマネジメント**
+縦軸と横軸に別々の指標を設定したマトリックス図を四つの象限に区分し、製品や事業、あるいはプロジェクトの位置付けを分析して資源配分を検討する手法です。
+製品に対するプロダクトポートフォリオ分析の場合と同様に、図のポートフォリオ類型は事業ごとの市場における自社の置かれた立場を客観的にとらえるために用いられます。
+`この分析により事業の市場での立場を明らかにし、自社の資源をどの製品に配分していくのが効果的なのかを判断する材料とします。`
+
+
+**プロダクトポートフォリオマネジメント**
+花形、金のなる木、問題児、負け犬
+
+
+
+**プロダクトライフサイクル(Product Life Cycle)**
+製品を市場に投入してから販売活動によって普及、成熟し、やがて落ち込んでその寿命が終わるまでの過程を、
+**導入期→成長期→成熟期→衰退期**の順で推移していくと表現した概念です。
+企業は、製品が現在ライフサイクルのどのステージにあるかによって、適した商品展開の戦略を考えます。
+導入期では「製品認知度の向上」，成長期では「他社との差別化」，成熟期では「製品改良・多様化」，衰退期では「撤退時期の決定」などの戦略が重要になります。
+
+先進的な消費者に対し製品を販売する時期である。製品の認知度を高める戦略が採られる。
+需要は部分的で，新規需要開拓が勝負である。特定ターゲットに対する信念に満ちた説得が必要である。
+導入期の説明です。
+
+売上が急激に増加する時期である。市場が活性化し新規参入企業によって競争が激化してくる。
+市場が商品の価値を理解し始める。商品ラインもチャネルも拡大しなければならない。この時期は売上も伸びるが，投資も必要である。
+成長期の説明です。
+
+需要の伸びが鈍化してくる時期である。製品の品質改良などによって，シェアの維持，利益の確保が行われる。
+需要が大きくなり，製品の差別化や市場の細分化が明確になってくる。競争者間の競争も激化し，新品種の追加やコストダウンが重要となる。
+成熟期の説明です。
+
+売上と利益が徐々に減少する時期である。追加投資を控えて市場から撤退することが検討される。
+需要が減ってきて，撤退する企業も出てくる。この時期の強者になれるかどうかを判断し，代替市場への進出なども考える。
+衰退期の説明です。
+
+
+
+**CRM(Customer Relationship Management)**
+顧客満足度を向上させるために、顧客との関係を構築することに重点を置く顧客関係管理の経営手法で、
+新規顧客を獲得するより、既存顧客の維持に力を入れる方が有効な戦略であるというのが、CRMの考え方です。
+
+**リレーションシップマーケティング**
+顧客と良好な関係を長期的に維持・向上させていくことで商品や企業に対する顧客の信頼や愛着（ロイヤリティ）を高め、
+リピート購入や来店数の増加を通じて安定した売上の獲得を目指すマーケティング手法です。
+リレーションシップマーケティングを支援するための経営システムがCRM(Customer Relationship Management)と考えればよいと思います。
+
+顧客との良好な関係を維持することで個々の顧客から長期間にわたって安定した売上を獲得することを目指すマーケティング手法。
+
+
+**MRP(Materials Requirements Planning)**
+製造に必要な資材の発注量と発注時期の決定
+
+**POS(Point Of Sales)**
+販売時点での商品ごとの販売情報の把握
+
+**SCM(Supply Chain Management)**
+生産・在庫・購買・販売・物流などのすべての情報をリアルタイムに交換・一元管理することによって生産から販売に至る一連の流れ全体の効率を大幅に向上させることを目指す経営管理手法です。
+導入することで納期短縮や在庫削減といった効果が期待できます。
+`調達から販売までの複数の企業や組織にまたがる情報を統合的に管理することによって，コスト低減や納期短縮などを目的とする。`
+在庫不足による販売機会損失の削減
+
+**SFA(Sales Force Automation)**
+顧客情報や商談スケジュール，進捗状況などの商談状況を一元管理することによって，営業活動の効率向上を目的とする。
+
+**ERP(Enterprise Resource Planning)**
+生産や販売，在庫，会計など基幹業務のあらゆる情報を統合管理することによって，経営効率の向上を目的とする。
+
+**HRM(Human Resource Management，人的資源管理)**
+社員のスキルや行動特性を把握し，人事戦略の視点から適切な人員配置・評価などのマネジメントを行う。
+
+
+
+**スケールメリット**
+規模の経済性ともいわれ、生産規模を拡大するほど生産性や経済効率が向上し、利益率が高くなることをいう。
+生産量が多いほど享受できる生産上の利点のこと
+
+**シナジー効果**
+相乗効果ともいわれ、2つ以上の要素が組み合わさることで、それぞれの単体で得られる効果の合計よりも大きな効果を得ることをいう。
+1＋1＝2にとどまらず3にも4にもなるような要素同士の組合せ効果のこと
+
+
+
+**コストプラス価格決定法**
+製品のコストに一定の利幅を加えて製品価格とするコスト志向型の価格設定法です。
+計算式で表すと、`製品価格＝売上原価＋間接費＋利益`となります。
+`製造原価又は仕入原価に一定のマージンを乗せて価格を決定する。`
+
+**目標利益法**
+目標販売量を基に，総費用吸収後に一定の利益率を確保できる価格を決定する。
+
+**市場価格追随法**
+業界の平均水準や競合企業の設定価格を参考に，競争力のある価格を決定する。
+
+**需要価格設定法**
+買い手が認める品質や価格をリサーチし，訴求力のある価格を決定する。
+
+
+
+**コンバージョン率**
+コンバージョン率は、サイトアクセス者のうち、どの程度が成約（商品購入や申込み）に至ったかを示す指標です。
+
+**ROAS(Return On Advertising Spend)**
+広告費に対してどれだけ売上があったかを示す指標です。
+「ROAS(%)＝広告経由での売上÷広告費×100」で計算し、この値が高いほど少ない広告費で売上を上げたことになります。
+Advertising:広告
+
+**ページビュー**
+そのWebページが何回表示されたか示す指標です。
+一般にページビューが上がるとそれに伴い成約数も増えますが、設問の目的は成約率の向上ですので比較する指標としては不適切です。
+
+**ソーシャルメディア(Social Media)**
+TwitterやFaceBookなどのSNSや"クチコミサイト"に代表されるような、
+多くの利用者が情報を発信し合い双方向のコミュニケーションをとることを主目的としたコミュニティ型メディアの総称です。
+最近はスマートフォンの普及と相まって顧客とのコミュニケーション、企業情報の発信、キャンペーン活動などにソーシャルメディアを活用する動きが活発になっています。
+
+---
+
+## 1回目に間違えた問題
+
+ITベンダにおけるソリューションビジネスの推進で用いるバランススコアカードの，学習と成長のKPIの目標例はどれか。ここで，ソリューションとは"顧客の経営課題の達成に向けて，情報技術と専門家によるプロフェッショナルサービスを通して支援すること"とする。
+
+情報戦略のコンサルティングサービスに重点を置くために，社内要員30名をITのプロフェッショナルとして育成する。
+正しい。学習と成長の視点です。
+
+サービスを提供した顧客に対して満足度調査を行い，満足度を5段階評価で平均3.5以上とする。
+顧客の視点です。
+
+再利用環境の整備によってソリューション事例の登録などを増やし，顧客提案数を前年度の1.5倍とする。
+内部ビジネスプロセスの視点です。
+
+情報戦略立案やシステム企画立案に対するコンサルティングの受注金額を，全体の15%以上とする。
+財務の視点です。
+
+
+図に示すマトリックスを用いたポートフォリオマネジメントによって，事業計画や競争優位性の分析を行う目的はどれか。
+
+目標を設定するために，季節変動要因や地位的広がりを加味することによって，市場の変化を評価する。
+
+目標を設定し，資源配分の優先順位を設定するための基礎として，自らの置かれた立場を評価する。
+
+目標として設定したプロモーション効果を測定するために，自ら置かれた立場を評価する。
+
+目標を設定し，製品の品質を高めることによって，市場での優位性を維持する方策を評価する。
+
