--- a/BasicInformation/午前/1.テクノロジ系/10.ネットワーク.md
+++ b/BasicInformation/午前/1.テクノロジ系/10.ネットワーク.md
@@ -2,4 +2,467 @@
 
 ---
 
+## データ通信と制御
+
+**OSI基本参照モデル**  
+異機種間のデータ通信を実現するために，通信サービスを7つの階層に分割し，各層ごとに標準的なプロトコルや通信サービスの仕様を定めるという考え方をモデル化したものです。
+
+**アプリケーション層(第7層)**  
+各層のうち，最も利用者に近い部分であり，ファイル転送や電子メールなどの機能が実現されている。
+
+**プレゼンテーション層(第6層)**  
+データの表示形式を管理したり、文字コードやエンコードの種類などを規定する役割をもつ。
+
+**セション層(第5層)**  
+アプリケーションプロセス間での会話を構成し，同期をとり，データ交換を管理するために必要な手段を提供する役割をもつ。
+
+**トランスポート層(第4層)**  
+エラー検出/再送などの伝送制御を担い通信の品質を保証する役割をもつ。
+
+**ネットワーク層(第3層)**  
+エンドシステム間のデータ伝送を実現するために，ルーティング(通信経路選択)や中継などを行う役割をもつ。
+
+**データリンク層(第2層)**  
+隣接ノード間の伝送制御手順(誤り検出，再送制御など)を提供する役割をもつ。
+
+**物理層(第1層)**  
+物理的な通信媒体の特性の差を吸収し，上位の層に透過的な伝送路を提供する役割をもつ。
+
+**TCP/IP階層モデル**  
+OSI基本参照モデルと異なり全部で4つの階層から成っています。
+また両モデルの対応関係は次のようになっています。(TCP/IP階層モデルは一般的には4層ですが、設問に合わせてネットワークインタフェース層をリンク層とハードウェア層に分割しています)
+
+アプリケーション層
+トランスポート層
+インターネット層
+ネットワークインターフェース層(リンク層、ハードウェア層)
+
+
+**リピータ(Repeater)**  
+データ伝送中に弱くなった電気信号を増幅し、データの伝送可能距離を延長するLAN間接続装置です。
+OSI基本参照モデルの物理層での接続を行います。
+リピータは，同種のセグメント間で信号を増幅することによって伝送距離を延長する。
+
+**ルータ(Router)**  
+異なる2つのネットワークをOSI基本参照モデルのネットワーク層で接続し、通過するパケットのIPアドレスを見てパケットを最適な経路に中継する通信装置です。
+ルータは、パケットを受信すると、そのヘッダ情報に含まれる`宛先IPアドレス`を確認します。
+そして自身が持つルーティングテーブルと照合して、適切なインタフェースからパケットを送出します。
+
+**スイッチングハブ(レイヤ2スイッチ)**  
+OSI基本参照モデルのデータリンク層で接続し、通過するパケットのMACアドレスを見てパケットを送信ポートを判断する装置です。
+スイッチングハブと同様にデータリンク層で動作する機器にブリッジがありますが、ブリッジがソフトウェアで宛先制御を行うのに対して、
+スイッチングハブはハードウェア機構によって宛先制御を行うためより高速に動作するという違いがあります。
+
+**ブリッジ(Bridge)**  
+OSI基本参照モデルのデータリンク層で接続し、通過するパケットのMACアドレスを見てパケットを中継するかどうかを判断する通信装置です。
+MACフレームを受け取ったブリッジは、ヘッダ情報内のMACアドレスと自身がもつMACアドレステーブルに基づき、宛先が存在するポートのみにMACフレームを送出します。
+
+**ゲートウェイ**  
+OSI基本参照モデルの全階層(主に4層より上)を解釈し、ネットワークの接続を行う機器です。
+
+**レイヤ3スイッチ**  
+レイヤ2スイッチにルーティング機能を追加したものです。ルータの高速版と覚えておけばよいと思います。
+同じくOSI基本参照モデル第3層（ネットワーク層）で動作するルータがソフトウェアでパケットを処理するのに対して、
+スイッチはASICと呼ばれる専用のハードウェアチップを用いるため、はるかに速く処理を行うことができます。
+
+**CSMA/CD方式(Carrier Sense Multiple Access with Collision Detection)(搬送波感知多重アクセス／衝突検出方式)**  
+各ノードは伝送媒体が使用中かどうかを調べ，使用中でなければ送信を行う。衝突を検出したらランダムな時間の経過後に再度送信を行う。
+CSMA/CD方式は一本の同軸ケーブルに複数のコンピュータが接続されているバス型のトポロジを前提としており、次のような手順で送信が行われます。
+1.伝送路上に他のノードからフレームが送出されていないかを確認する
+2.複数のクライアントは同じ回線を共用し、他者が通信をしていなければ自分の通信を開始する。
+3.複数の通信が同時に行われた場合は衝突を検出し、送信を中止してランダム時間待ってから再び送信をする。
+
+**CSMA/CA方式(Carrier Sense Multiple Access with Collision Avoidance)(搬送波感知多重アクセス／衝突回避方式)**  
+無線LANの通信規格のIEEE802.11a、802.11b、802.11g の通信手順として採用されているものです。
+無線LANではフレーム衝突を検出できないため、この手法で衝突を回避（Collision Avoidance）します。
+
+**トークンパッシング方式**  
+各ノードを環状に接続して，送信権を制御するための特殊なフレームを巡回させ，これを受け取ったノードだけが送信を行う。
+
+**優先度制御方式**  
+各ノードに論理的な順位付けを行い，送信権を順次受け渡し，これを受け取ったノードだけが送信を行う。
+
+**TDMA方式**  
+タイムスロットを割り当てられたノードだけが送信を行う。
+
+---
+
+## 通信プロトコル
+
+**DHCP(Dynamic Host Configuration Protocol)**  
+TCP/IPネットワークで、ネットワークに接続するノードへのIPアドレスの割り当てをアドレスプールから自動的に行うプロトコルです。
+各クライアントにIPアドレスを設定するネットワーク管理の負担が軽減され、使い終わったIPアドレスを回収し、
+他のノードに再割当てを行うことでIPアドレス資源の有効活用が期待できます。
+
+**DNS(Domain Name System)**  
+ドメイン名とIPアドレスを結びつけて変換する(名前解決する)仕組みです。
+
+**PPP(Point-to-Point Protocol)**  
+電話回線を通じてコンピュータをネットワークに接続するダイヤルアップ接続でよく使われる、2点間を接続してデータ通信を行うための通信プロトコルです。
+
+**PPPoE(Point-to-Point Protocol over Ethernet)**  
+PPPプロトコルをEthernet上で利用するためのプロトコルです。
+
+**FTP(File Transfer Protocol)**  
+ネットワーク上でファイルの転送を行うための通信プロトコルです。
+
+**TCP(Transmission Control Protocol)**  
+TCP/IPネットワークにおいて通信を行う2つのノード間にコネクションと呼ばれる論理的な通信路を確立し、送達管理や、伝送管理などの機能を提供するプロトコルです。
+OSI基本参照モデルでTCPが属するトランスポート層は、通信の信頼性を確保する機能のほかに、アプリケーション間の通信を実現するという機能があります。
+IPアドレスは、パケットを送信元ホストから宛先ホストに届けるための情報で、パケットを送り届けるアプリケーションの情報は含まれていません。
+このパケットの宛先となるアプリケーションを指定する情報がポート番号です。
+宛先IPアドレス・ポート番号は、パケットを届けるのに必要で、送信元IPアドレス・ポート番号はパケットを受け取ったホストがパケットを返信する際に返信パケットに宛先としてセットするために必要となる。
+
+**UDP(User Datagram Protocol)**  
+TCP/IPの通信処理で使われる伝送制御プロトコルのひとつでTCPと同じトランスポート層に位置します。
+TCPでは信頼性を担保するために、コネクション確立、再送処理、輻輳処理などの様々な仕組みが取り入れられていますが、その分だけ通信のオーバヘッドは増加してしまいます。UDPは、TCPから信頼性確保を取り除いたコネクションレス型の通信を実現するプロトコルです。ヘッダ構成もTCPと比べて簡素化されデータ比率が高められるようになっています。UDPは、リアルタイム性が重視される音声や画像のストリーム配信、および、DNS、DHCP、NTPなどのアプリケーション層プロトコルで用いられています。
+
+TCP…信頼性重視
+UDP…通信効率、リアルタイム性重視
+
+
+**NTP(Network Time Protocol)**  
+ネットワークに接続されている環境において、サーバ及びクライアントコンピュータが持つシステム時計を正しい時刻(協定世界時:UTC)へ同期するためのプロトコルです。
+
+**ARP(Address Resolution Protocol)**  
+IPアドレスから対応する機器のMACアドレスを取得するプロトコルです。
+
+**ICMP(Internet Control Message Protocol)**  
+インターネットプロトコル(IP)の通信制御を補完するプロトコルで、データ配送中のエラー通知や送達エラーを通知する機能を持ちます。
+TCP/IPで接続しているノード（サーバ、PC等）間の通信状態を確認します。また、誤った通知や通信関連の情報の通知などのためのプロトコルです。
+Pingコマンドはこのプロトコルを使ってIPの通信を確認するソフトウェアコマンド。
+
+**RIP(Routing Information Protoco)**  
+ゲートウェイ間のホップ数によって経路を制御するルーティングプロトコルです。
+経路数か重み付けかのアレ。
+
+**SMTP(Simple Mail Transfer Protocol)**  
+インターネット環境において、クライアントからサーバにメールを送信したり、サーバ間でメールを転送するのに用いられるプロトコルです。
+
+**RPC(Remote Procedure Call)**  
+サーバにあるプログラムを，サーバのIPアドレスを意識することなく，プログラム名の指定だけで呼び出すようにする。
+
+**NAT(Network Address Translation)**  
+社内のプライベートIPアドレスをグローバルIPアドレスに変換し，インターネットへのアクセスを可能にする。
+IPマスカレードともいう。
+
+**NAPT(Network Address Port Translation,IPマスカレード)**  
+プライベートIPアドレスとグローバルIPアドレスを相互変換するNATの考え方にポート番号を組み合わせた技術です。
+NAPTでは、インターネットに接続するノードに対して固有のポート番号を割り当て、IPアドレスだけでなくポート番号も一緒に変換します。
+これにより、1つのグローバルIPアドレスを使ってプライベートネットワーク内の複数のノードが同時にインターネットに接続することが可能となります。
+
+
+**ポート番号**  
+コンピュータがデータ通信を行う際に通信先のプログラムを特定するための番号のことです。
+TCP/IP通信において、コンピュータが通信に使用するプログラムを識別するための16ビットの数値で 0～65535 が指定可能です。
+
+ネットワーク上で相手コンピュータにデータを送信する場合、通信相手のコンピュータはIPアドレスで指定しますが、
+そのコンピュータで動いているどのプログラムにデータを送るかを指定する情報がポート番号です。
+IPアドレスを建物の住所に例えるなら、ポート番号は部屋番号に相当します。
+
+TCPやUDPのヘッダには、宛先ポート番号と送信元ポート番号というフィールドがあります。
+宛先ポート番号は、原則としてクライアントがサービスを要求する場合には「当該サービスを受け付けている番号」、
+サーバがクライアントに応答する場合には「サービスを要求してきたクライアントのポート番号」が設定されることになります。
+この問題ではパケットのポート番号に注目しながら通信の様子を確認します。
+
+プロキシサーバは8080番でサービスを待ち受けているので、クライアントは宛先ポート番号に8080、送信元ポート番号に任意の番号(p1)を設定してプロキシサーバに送信する。
+クライアントからHTTP代理要求を受けたプロキシサーバは、宛先ポート番号に80、送信元ポート番号に任意の番号(p2)を設定してWebサーバに送信する。
+プロキシサーバからHTTP要求を受けたWebサーバは、宛先ポート番号にp2、送信元ポート番号に80を設定してWebサーバに送信する。
+WebサーバからHTTP応答を受け取ったプロキシサーバは、宛先ポート番号にp1、送信元ポート番号に8080を設定してクライアントに送信する。
+
+
+**ウェルノウンポート番号(Well-known port numbers)**  
+ポート番号のうち、よく利用される特定のアプリケーション用に予約されている 0～1023 までのことです。
+
+下記のプロトコルとポート番号の組みについては情報処理技術者試験での出題頻度が高いため覚えておいて損はありません。
+HTTP → 80/TCP
+FTP → 20/TCP，21/TCP
+SMTP → 25/TCP
+POP3 → 110/TCP
+DNS → 53/TCP，53/UDP
+HTTPS → 443/TCP
+NTP → 123/UDP
+SNMP → 161/UDP,162/UDP
+
+・FTPには、データの転送用に「20/TCP」、制御用に「21/TCP」が割り当てられています。
+・SNMPでマネージャ側からエージェントに通知するときに使用される宛先ポートが「161/UDP」、逆にエージェント側からマネージャに通知するときに使用される宛先ポートが「162/UDP」です。
+・SMTPで通常のメール転送に使用されるのが「25/TCP」、メールソフトからメールサーバに届けるときに使用する送信専用の宛先ポート(サブミッションポート)が「587/TCP」です。
+・ポート8080番は代替HTTPポートと呼ばれ、大抵のプロキシサーバは8080番でサービスを待ち受けています。
+・1024～49151もRegisteredポートとして予約されているため、クライアント端末のポート番号には、上記以外の49152～65535の範囲を使用することになっています。
+
+
+**IPv4(Internet Protocol Version 4)**  
+・アドレス長は32ビット
+・192.168.0.0～192.168.255.255 は、クラスCのプライベートアドレス
+・IPv4におけるループバックアドレスは「127.0.0.1」です。自分自身を指す。
+**「127.0.0.1」＝ループバックアドレス＝「自分」を意味するIPアドレス**  
+
+127.158.32.134のように先頭の1バイトが"127"であるIPアドレスは「ローカル・ループバック・アドレス」といい、
+自分自身のマシンを指す特別なアドレスとして規定されているため、グローバルIPアドレスには使用できません。
+
+
+**IPv6(Internet Protocol Version 6)**  
+現在インターネットで主流であるIPv4の次期バージョンです。
+IPv4のアドレス空間は32ビットですが、インターネットの世界的な普及で枯渇することが確実になっています。
+この問題への対策として、策定されたのがIPv6であり、IPv4からIPv6への主な変更点は次の通りです。
+
+・アドレス空間を32ビットから128ビットに拡大(340澗（かん）は、340兆の1兆倍の1兆倍。)
+・ヘッダのサイズを可変長から固定に変更
+・IPアドレスの自動設定
+・IPSecによるIP層でのセキュリティー強化
+
+・IPv4の$2^96$倍のアドレス空間を持つ
+・複数のアドレス表記法があり，その一つは，アドレスの16進数表記を4文字(16ビット)ずつコロン":"で区切る方法である。
+  16ビットずつの纏まりを16進数4桁で表記したものを":(コロン)"で区切る表記法になっています。
+例題的な表記法を乗せておきたい。
+
+・グローバルアドレスの他に、所属するネットワーク内(ルータを超えない範囲)でのみ有効な「リンクローカルアドレス」や、
+　IPv4のプライベートアドレスに相当する「ユニークローカルユニキャストアドレス」があります。
+
+
+**IPアドレスクラス**  
+IPv4におけるA～Dの各アドレスクラスは、以下のようにIPアドレスの先頭4ビットによって区別されています。
+対象となるIPアドレスの上位8ビットに注目します。
+
+クラスA
+先頭ビットが0 (先頭8ビットの10進表記が0～127) 0000 0000 ~ 0111 1111
+10.0.0.0～10.255.255.255(10.0.0.0/8) は、クラスAのプライベートアドレス
+
+クラスB
+先頭ビットが10 (先頭8ビットの10進表記が128～191) 1000 0000 ~ 1011 1111
+172.16.0.0～172.31.255.255(172.16.0.0/12) は、クラスBのプライベートアドレス
+
+クラスC
+先頭ビットが110 (先頭8ビットの10進表記が192～223) 1100 0000 ~ 1101 1111
+192.168.0.0～192.168.255.255(192.168.0.0/16) は、クラスCのプライベートアドレス
+
+クラスD
+先頭ビットが1110 (先頭8ビットの10進表記が224～239) 1110 0000 ~ 1110 1111
+
+例えば10進数128を2進数表記に変換すると10000000です。
+この定義に当てはめると、128はクラスBの範囲内であるため、128.0.0.0 はクラスBのIPアドレスということになります。
+
+
+
+平成28年秋期　問34
+図はNTPによる時刻合わせの基本的な仕組みを表している。NTPサーバからの応答には，NTPサーバでの問合せ受信時刻と，応答送信時刻が含まれており，PCは図に示した四つの時刻からサーバ時刻とのずれを計算する。このとき，PCの内部時計はNTPサーバの時計と比べてどれだけずれているか。ここで，伝送遅延は問合せと応答で等しいものとする。また，図中の時刻は，PCとNTPサーバのそれぞれの内部時計の時刻であり，aa:bb:cc.dddddd は aa時bb分cc.dddddd秒 (ddddddはマイクロ秒)を表す。
+→
+まず、4つの時刻から問合せ・応答の伝送遅延時間を求めます。
+PCの問合せ送信から応答受信までが(900-100=)800マイクロ秒、NTPサーバの問合せ受信から応答送信までが(400-200=)200マイクロ秒なので、問合せ・応答の往復に要した伝送時間は、以下のように計算できます。
+　800－200＝600(マイクロ秒)
+設問にて「伝送遅延は問合せと応答で等しい」と示されているため、問合せと応答の際の伝送遅延は各々300マイクロ秒とわかります。
+次に、求めた伝送遅延時間を用いて時刻のずれを計算します。
+NTPサーバの応答送信時刻が aa:bb:cc.000400 なので、これに伝送遅延の300マイクロ秒を足した aa:bb:cc.000700 がPCの応答受信時刻になるはずです。
+しかしPCの応答受信時刻は aa:bb:cc.000900 を示しているため、時計のずれが生じていると判断できます。PCとNTPサーバの時計の差は次のように導けます。
+　900－700＝＋200(マイクロ秒)
+→
+300マイクロ秒の差があるなら、問い合わせ開始時間と問い合わせ受信時間のズレに納得がいかないと思ったけど、
+最初から200マイクロ秒ずれていると考えたら辻褄は合う。
+わかるようでわからない問題だから辛い。
+まずやることは、PC側の送信受信時間とNTPサーバーの受信送信時間から伝送遅延を導くこと。
+求めた伝送遅延をNPTか送信して到着するまでの時間に当てはめて、そのずれを導けば良いということか。
+
+---
+
+## ネットワーク管理
+
+**ping(ピン，ピング)**  
+IPネットワークにおいて対象の端末にパケットを送信し、正しく届いたかを確認するためのコマンドです。
+具体的には、ICMPの"echo request"(エコー要求)パケットを対象ノードに投げ、対象ノードから"echo reply"(エコー応答)が返ってくることで到達性を確認します。
+
+**arp(アープ)**  
+ARPテーブルの管理に使用されるコマンドで、ARPテーブルの表示およびエントリの追加／削除の機能をもちます。
+IPアドレスから対応する機器のMACアドレスを得るARP(Address Resolution Protocol)と同名です。
+
+**netstat**  
+自端末のTCP/IPネットワーク接続状況を調べるコマンドです。ルーティングテーブル、通信状態、通信相手、通信量などの情報が得られます。
+
+**ipconfig**  
+自端末のネットワーク設定を表示するコマンドです。IPアドレスやサブネットマスクおよびデフォルトゲートウェイの情報などが得られます。
+
+
+**OpenFlow**  
+既存のネットワーク機器がもつ制御処理と転送処理を分離したアーキテクチャです。
+制御部をネットワーク管理者が自ら設計・実装することで、ネットワーク機器ベンダの設定範囲を超えた柔軟な制御機能を実現できます。
+
+**SDN(Software-Defined Networking)**  
+OpenFlow上でソフトウェア制御による動的で柔軟なネットワークを作り上げる技術全般を意味します。
+SDNを用いると、物理的に接続されたネットワーク上で、 別途仮想的なネットワークを構築するといった柔軟な制御が可能になります。
+
+---
+
+## ネットワーク応用
+
+**MIME(Multipurpose Internet Mail Extension，マイム)**  
+ASCII文字しか使用できないSMTPを利用したメールで、日本語の2バイトコードや画像データを送信するための仕組みです。
+S/MIME(Secure MIME)は、これに暗号化とディジタル署名の機能を付け電子メールの機密性と完全性を高めたものです。
+
+**Bcc(ブラインドカーボンコピー)**  
+電子メールにおける送信先指定方法の1つで、toで指定した送信先以外に、メールのコピーを送信しておきたい相手を指定する機能のことです。
+この指定を用いると、toの相手及びbccで指定した相手に、自分以外の送り先のアドレスが通知されないため、
+toの相手とbccの相手の相互間で電子メールアドレスを知られたくない場合に使用します。
+メールソフトから送信元サーバへはbccヘッダを付加して送りますが、宛先に到着したときにbccのメールアドレスがメールヘッダ情報として見えてしまうと意味がないので、
+送信元メールサーバではメール送信時にbccヘッダを削除します。
+
+**Received**  
+メールが到着するまでに経由したメールサーバの一覧を表します。
+
+
+**CGI(Common Gateway Interface)**  
+ユーザの入力した情報によって表示するWebページを変化させるなど、動的なWebページを作成するための仕組みです。
+Webサーバにおいて，クライアントからの要求に応じてアプリケーションプログラムを実行して，その結果をWebブラウザに返すなどのインタラクティブなページを実現するために，Webサーバと外部プログラムを連携させる仕組み。
+CGIはどのプログラム言語を用いても作成できますが、実際にはPHPやPerlが多用されているようです。
+
+**URL(Uniform Resource Locator)**  
+インターネット上のリソース（資源）を特定するための形式的な記号の並びで、Webサイトの場合はホームページアドレスとも呼ばれています。
+
+
+**サブネットマスク**  
+IPアドレスをネットワークアドレスとホストアドレスに分割し，複数のより小さいネットワークを形成するために使用する32ビット(IPv4では)のビット列です。
+それぞれのIPアドレスとサブネットマスクをAND演算した結果が同じネットワークアドレスになれば同一のネットワークに属していることになります。
+
+サブネットがかかっている部分→ネットワークアドレス部
+サブネットかかっていない部分→ホストアドレス部
+
+192.168.30.32/28
+"192.168.30.32"の後方に付加されている"/28"は**アドレスプレフィックス**といい、先頭から何ビットまでがネットワークアドレスであるかを示す表記法です。
+
+**ブロードキャストアドレス**  
+ホストアドレス部がすべて"1"となるアドレス
+**ネットワークアドレス**  
+ホストアドレス部がすべて0となるアドレス
+
+どちらのアドレスもPCに割り振ることができない。
+
+---
+
+## ネットワーク方式
+
+**LTE(Long Term Evolution)**  
+第三世代携帯電話(3G)を拡張した通信規格であり、下り最大100Mbps以上、上り最大50Mbps以上という家庭用ブロードバンドに匹敵する高速通信が可能な携帯電話用の通信規格です(速度は理論値)。
+日本では2012年より各キャリアによりサービスが開始され、2018年現在、一般的な移動通信規格になるに至っています。
+LTEの仕様は標準化団体である3GPP(3rd Generation Partnership Project)にて標準化されました。
+MIMO(Multiple Input Multiple Output)とは、無線通信において送信データを複数のストリームに分割し、それぞれを複数のアンテナで送受信することで高速に伝送する技術です。
+
+**VoIP(Voice over Internet Protocol)**  
+音声を各種符号化方式で圧縮しパケットに変換した上でIPネットワークでリアルタイム伝送する技術です。
+
+**MAC(Media Access Control)**  
+LANの媒体アクセス制御を行うデータリンク層の副層のことです。イーサネット用のCSMA/CDやトークンリング用のトークンパッシングなどがあります。
+
+**MDM(Mobile Device Management,携帯端末管理)**  
+企業や団体が、自組織の従業員に支給する複数のスマートフォンやタブレット端末を遠隔から一元管理する仕組みのことです。
+
+
+
+10Mバイトのデータを100,000ビット／秒の回線を使って転送するとき，転送時間は何秒か。ここで，回線の伝送効率を50%とし，1Mバイト＝10^6バイトとする。
+→
+伝送効率が50%である100,000ビット／秒の通信回線を使うので、実効転送速度は以下のように計算できます。
+　100,000[ビット／秒]×0.5＝50,000[ビット／秒]
+転送するデータの単位がバイトなので実効転送速度もバイト単位に直します（1バイト＝8ビット）。
+　50,000[ビット]÷8[ビット]＝6,250[バイト／秒]
+転送するデータ量（10Mバイト）を1秒当たりの転送量（6,250[バイト／秒]）で割ることで、転送時間を計算できます。
+　10,000,000[バイト]÷6,250[バイト／秒]＝1,600[秒]
+
+【別解】
+上記の解説ではバイトに揃えて計算していますが、Mビットに揃えた方が計算が容易かもしれません。
+
+【実行転送速度】
+　100,000[ビット／秒]×0.5＝50,000[ビット／秒]
+＝0.05[Mビット／秒]
+【転送するデータ量】
+　10[Mバイト]×8[ビット]＝80[Mビット]
+【転送時間】
+　80[Mビット]÷0.05[Mビット／秒]＝1,600[秒]
+
+
+
+64kビット／秒の回線を用いて106バイトのファイルを送信するとき，伝送におよそ何秒掛かるか。ここで，回線の伝送効率は80%とする。
+→
+回線速度が64kビット／秒で伝送効率が80%なので、
+
+　64kビット／秒＝8kバイト／秒
+　8k×0.8＝6.4kバイト／秒
+
+1秒間の伝送可能量は最大で6.4kバイトと計算できます。したがって106バイトのファイルを送信するときの伝送時間は、
+
+　1,000,000÷6,400＝156.25(秒)
+
+およそ「156秒」が適切です。
+
+
+
+符号化速度が192kビット／秒の音声データ2.4Mバイトを，通信速度が128kビット／秒のネットワークを用いてダウンロードしながら途切れることなく再生するためには，再生開始前のデータのバッファリング時間として最低何秒間が必要か。
+→
+音声データサイズを符号化速度※で割ると再生時間がわかります。音声データ2.4Mバイト、符号化速度は192kビット／秒と単位がビット・バイトで異なるので、どちらかに合わせて計算します。ここでは符号化速度の方を「192kビット÷8ビット＝24kバイト」とバイト単位に直します。
+
+　2.4[Mバイト]÷24[kバイト]
+＝2,400[kバイト]÷24[kバイト]
+＝100[秒]
+
+この計算により再生時間100秒相当の音声データであるとわかります。
+
+次に音声データサイズを通信速度で割って、ダウンロードに要する時間を求めます。音声データサイズは2.4Mバイト、ネットワークの通信速度は128kビット／秒(＝16kバイト／秒)なので、ダウンロードに要する時間は、
+
+　2.4[Mバイト]÷16[kバイト]
+＝2,400[kバイト]÷16[kバイト]
+＝150[秒]
+
+再生時間よりダウンロード時間が長い状態ではデータの転送が遅れ、再生途中で停止してしまうことになるため、再生開始前にある程度のデータをバッファリング(一時的に蓄えておく処理)する必要が生じます。再生時間と転送時間の差は50秒なので、この差分である50秒分のデータをあらかじめ蓄えた状態で再生を開始し、再生しながらデータをダウンロードすれば、最後まで途切れずに再生が行われることになります。
+
+したがって〔ウ〕が適切です。
+
+※符号化速度は、アナログデータをディジタルデータに変換するに際して、単位時間当たり何ビットで表現するかを示します。
+
+
+平成29年春期　問30
+本社と工場との間を専用線で接続してデータを伝送するシステムがある。このシステムでは2,000バイト／件の伝票データを2件ずつまとめ，それに400バイトのヘッダ情報を付加して送っている。伝票データは，1時間に平均100,000件発生している。回線速度を1Mビット／秒としたとき，回線利用率はおよそ何%か。
+→
+システムでは発生したデータを「2件の伝票データ＋ヘッダ → 1つの送信単位」と変換を行ってから送信します。
+この送信単位となるデータは、上の図のように伝票データを2件まとめたものにヘッダ情報が付加されるので、
+　2,000×2＋400＝4,400(バイト)
+1つ当たり4,400バイトになります。
+1時間に発生する伝票データは平均100,000件なので、送信時には半分の50,000件の送信データに変換されます。
+1時間に4,400バイトのデータが50,000件送信されるので、1時間当たりの伝送量は平均で、
+　4,400バイト×50,000件＝220Mバイト
+
+回線速度は、1Mビット／秒＝125kバイト／秒で、1時間の伝送可能量は、
+　125kバイト×3,600秒＝450Mバイト
+したがって回線利用率は、
+　220÷450＝0.48888…
+およそ49%とわかります。
+
+---
+
+## コラム
+
+**RADIUS(Remote Authentication Dial In User Service)**  
+認証情報と認証手続き、および利用ログの記録(アカウンティング)をネットワーク上のサーバに一元化することを目的としたシステムです。
+
+---
+
 ## 1回目に間違えた問題
+
+電子メールのヘッダフィールドのうち，SMTPでメッセージが転送される過程で削除されるものはどれか。
+→
+受け取ったという情報は消えていいよなと思って「Received」なるものを選択してみたが、ダメだった。
+Bccは情報としては消えるべきだが、ヘッダーとして消えるべきか怪しかったので選ばなかったがこれが正解だった。
+
+
+IPv4アドレス 128.0.0.0 を含むアドレスクラスはどれか。
+→
+完全に忘れてる問題。
+3回目なのでいい加減に覚える。
+A : 0
+B : 10
+C : 110
+D : 1110
+
+
+
+TCP/IPネットワークで，データ転送用と制御用に異なるウェルノウンポート番号が割り当てられているプロトコルはどれか。
+→
+普通に知らなかった。
+ズバリFTPなのだが、確かに2つある。
+ついでにDNSも2つある。
+覚えよう。
