--- a/BasicInformation/午前/1.テクノロジ系/7.ヒューマンインターフェース.md
+++ b/BasicInformation/午前/1.テクノロジ系/7.ヒューマンインターフェース.md
@@ -2,4 +2,100 @@
 
 ---
 
+## インターフェース設計
+
+**重複チェック**  
+入力データと同じデータが既に入力済みではないか(一意であるか)を検証するものです。
+
+**フォーマットチェック**  
+入力データのけた数や文字種などの書式や形式が正しいかを検証するものです。
+
+**シーケンスチェック**  
+データが定められた順番に並んでいるかどうかを検証するものです。
+
+**論理チェック**  
+関連のある項目の値に矛盾がないかどうかをチェックするものです。
+複数の項目の関連から入力されたデータが論理的に矛盾していないかどうかを検証するものです。
+→
+注文日が入力日以前の営業日かどうかのチェックもこれに該当する。
+
+
+**パンくずリスト**  
+比較的大規模なWebサイトで、利用者が現在どこの階層のページにいるのかをユーザに知らせ、現在位置を見失わないようにする目的で設置されるユーザインタフェース(UI)部品です。
+各文字列がそれぞれのページへのハイパリンクとして機能し、Webサイトのナビゲーションを補助する役割を持っています。
+この「パンくずリスト」という名前は、童話「ヘンゼルとグレーテル」で主人公の男の子が森で迷わないように、通った道にパンくずを置いて行った話に由来しています。
+
+**サイトマップ**  
+Webサイトにあるコンテンツを項目立てて一覧表示したものです。利用者がどのようなコンテンツがあるのかを素早く認識でき、目的の情報にたどり着きやすくなる利点があります。
+
+**ナビゲーションバー**  
+Webサイトがどのようなコンテンツがあるかを知らせ、コンテンツへの誘導を促すメニューの役割をもつUI部品です。サイト内で共通してページの固定位置に設置することで利用者を迷わせないメリットがあります。
+
+**スクロールバー**  
+ウィンドウやHTML要素のサイズに収まらないページを閲覧するために使用されるUI部品です。
+
+
+**表意コード**  
+ニモニックコード(Mnemonic Code)とも言い、値から対象のデータが容易に連想できる英数字・記号の組合せをコードとして割り当てる方式です。
+他のコードよりも桁数が多くなりますが、利用者が記憶しやすい利点があり、商品番号や製品の型番としてよく使用されています。
+
+例)
+国名：日本→JP，アメリカ→US
+色名：黒→BK，白→WH
+プロジェクトマネージャ→PM　など
+
+**桁別コード**  
+各桁（または桁のグループ）に分類上の意味を持たせたコード体系です。JANコード、ISBNコード、運転免許証の番号などが桁別コードに該当します。
+
+**区分コード**  
+ブロックコードとも言い、営業部は1000～1999、企画部は2000～2999というようにグループごとに定められた範囲内でコードを割り当てる方式です。
+上位桁を見るだけで、どのグループに属しているのか判断できる特徴があります。
+
+---
+
+## ヒューマンインタフェース技術
+
+**ノンバーバルインタフェース**  
+ノンバーバルインタフェースは、言葉以外の情報をもとに対話を行う非言語のインタフェース技術です。バーバル(verbal)は口頭という意味です。身振りや表情、視線などで対話を行う例があります。
+
+**マルチモーダルインタフェース**  
+マルチモーダルインタフェースは、複数の情報伝達チャネル(視覚・触覚・聴覚など)を併用して対話を行うインタフェース技術です。バーチャルリアリティ(VR)などの例があります。
+
+**感性インタフェース**  
+感性インタフェースは、人間の感性にマッチしたインタフェースを構築する技術です。
+
+**自然言語インタフェース**  
+自然言語インタフェースは、人間同士の会話のように自然言語を用いてコンピュータとの対話を行うインタフェース技術です。
+
+
+**ラジオボタン(Radio Button)**  
+"男性／女性"のように、互いに排他的な複数の項目の中から1つだけを選択させる場合に使われるコントロールです。試験のマークシートをイメージするとわかりやすいでしょう。
+
+**ラジオボックス**  
+互いに排他的な幾つかの選択項目から一つを選ぶ。
+
+**コンボボックス**  
+幾つかの選択項目から一つを選ぶときに，選択項目にないものはテキストボックスに入力する。
+
+**リストボックス**  
+特定の項目を選択することによって表示される一覧形式の項目の中から一つを選ぶ。
+
+**チェックボックス**  
+幾つかの項目について，それぞれの項目を選択するかどうかを指定する。
+
+
+**マクロ機能**  
+複数の処理とその手順を定義しておき、必要な時にそれを呼び出して使うことができる機能です。
+よく使用される定型の処理手順を登録しておくことで、複数の操作を1回で行えるようにできたり、誰でも簡単に間違いなく決められた処理を実行できるなどの効果があります。
+
+
+---
+
 ## 1回目に間違えた問題
+
+次のような注文データが入力されたとき，注文日が入力日以前の営業日かどうかを検査するために行うチェックはどれか。
+→
+大抵ヴァリデーションで済ませていたので、論理かフォーマットかで迷ってしまった。
+よくよく考えれば、フォーマットは形式のチェックであるから、消去法で見たら論理でよかったんだよな。
+論理はその名の通り、大小関係など、論理的な矛盾をチェックするものだから、これでよかったのだ。
+
