--- a/BasicInformation/午前/1.テクノロジ系/8.マルチメディア.md
+++ b/BasicInformation/午前/1.テクノロジ系/8.マルチメディア.md
@@ -1,5 +1,180 @@
 # マルチメディア
 
+CG、映像関連、動画や画像の拡張子について問われる。
+
+---
+
+## マルチメディア技術
+
+**H.264/MPEG-4 AVC**  
+ワンセグ放送で使用されている動画圧縮技術
+ワンセグ放送などの低速・低画質のものからディジタルハイビジョンTVクラスの高ビットレート用途に至るまで、幅広く利用されることを想定した動画の圧縮符号化に関する規格です。
+1回ごとの差分情報の量を小さくするなどの改良を行うことで、従来から使用されてきたMPEG-2と比較して2倍以上の圧縮効率を実現しており、ワンセグ、テレビ会議システム、インターネット放送、Blu-Ray Disc、YouTube等の動画共有サービスなど様々な場面で使用されています。
+
+この規格の名称表記についてですが、ITU-Tが「H.264」、ISO/IECが「MPEG-4 AVC (ISO/IEC 14496-10)」として同じ内容をそれぞれ勧告・規定し、共同策定となったため「H.264/MPEG-4 AVC」または「MPEG-4 AVC/H.264」と両規格を併記することが多いようです。AVC(Advanced Video Coding，高度動画圧縮符号化)とは、MPEG-4規格書のPart10のタイトルであり"MPEG-4 Part10：AVC"の略称です。
+
+**JPEG**  
+ディジタルカメラで使用されている静止画圧縮技術
+
+**ドルビーデジタル(AC-3)**  
+5.1チャンネルサラウンドシステムで使用されている音声圧縮技術
+
+**AMR(Adaptive Multi-Rate)やEVS(Enhanced Voice Services)**  
+携帯電話で使用されている音声圧縮技術
+
+
+**ビットマップフォント**  
+文字をドット(点)の集合で表現したフォント形式。
+[メリット]
+描画速度が速い
+[デメリット]
+拡大・縮小を行った際に輪郭がギザギザに見える「ジャギー」という現象が発生する
+
+**アウトラインフォント**  
+文字を基準となる座標とそれらを結ぶ線の輪郭線情報として表現するフォントで、現在、一般的に使用されている方式。
+[メリット]
+幾ら拡大しても輪郭線がギザギザにならないため、どのような解像度でも対応できる
+[デメリット]
+表示や印刷の度に輪郭を計算しなくてはならないため描画処理に時間が掛かる
+
+英数字だけでなく，漢字も表示する。
+→
+漢字は細かい部分が多く、アウトラインフォントで小さく縮小すると、その部分がつぶれて読みにくくなってしまうため小さい文字では今でもビットマップフォントが使用されることがあります。
+
+各文字の幅を一定にして表示する。
+→
+どちらのフォント形式でも等幅で表示させることが可能です。
+
+
+**アンチエイリアシング**  
+ディジタル画像の物体の輪郭に現れるピクセルのギザギザ（ジャギー）を、なめらかに見せるために周囲(背景)の画素値と平均化処理をして描画するCG技法です。
+エイリアシング : 折り返し雑音。解像度が低い画面で,円や曲線がぎざぎざになって表示されること
+
+**バンプマッピング**  
+ポリゴンで表現された3DCGモデルの表面に、揺らぎによる凹凸情報を加えることでより自然な細やかさを表現する技法です。
+
+**シェーディング**  
+3DCGモデルに立体感を与えるために、光源と描画対象との位置関係から対象の陰影を計算し、物体の表面に陰付けを行う処理です。
+shade : 影
+
+**テクスチャマッピング**  
+3DCG表面に模様のついた壁紙のようなものを貼り付けることで質感を向上させる技法です。
+
+**レイトレーシング**  
+光源からの反射や屈折，透過を計算し描画していく。
+
+**隠線消去及び隠面消去**  
+3DCGモデルは、3次元の構造物なので視点によって見える部分が異なります。
+ある視点から見たときに物体の裏側または陰に位置し見えなくなってしまう線および面を描画しないようにする処理です。
+可視／不可視を判定するアルゴリズムには、塗り重ね法、スキャンライン法、Z-バッファ法などがあります。
+
+**クリッピング**  
+生成された画像について，表示する画面に収まる部分だけを表示する。
+2Dだとクリッピング、3Dだと隠線消去になるのかも。
+→
+画像表示領域にウィンドウを定義し，ウィンドウの外側を除去し，内側の見える部分だけを取り出す処理。
+画面表示領域外のデータを、計算対象から除外する処理です。
+最終的な仕上りに影響を与えない余分なデータを省くことで後工程で必要となる計算量を減らし、作業の効率が高まることも期待できます。
+→
+2d,3dで考えてたけど違うな。隠線は視点の話だ。
+こっちはウィンドウを定義して、そのウィンドウ外は除去するって話だ。
+
+**モーションキャプチャ**  
+現実の人間や動物の関節などに装着されたマーカー(センサー)ごとの動きをディジタルデータとして連続的に記録する技術です。
+得られたデータはスポーツ分野において身体の動きのデータ収集・分析や、CGアニメーションに実物のような動きを与えるために利用されます。
+
+**モーフィング**  
+CGにおいてある物体から別の物体へ変形していく間を、コンピュータ演算によって補完することで、自然な変形をする映像として作成する技法です。
+
+**ピクセルシェーダ**  
+3DCGにおいてテクスチャの表面色，光源，陰影などの情報をもとにピクセルに描画する色を計算する機能です。
+
+**キーフレーム法**  
+動きのポイントとなる物体の位置や形を定義し、その間をコンピュータ計算によって生成したフレームで補完することで滑らかなアニメーションを作成する技法です。
+
+
+**AR(Augmented Reality，拡張現実)**  
+現実世界の情報にディジタル合成などによって作られた情報を重ねて、人間から見た現実世界を拡張する技術の総称です。
+VR(Virtual Reality，仮想現実)がCGなどで構築された現実感と現実を差し替えるのに対し、ARは現実の一部を改変することが異なります。
+
+家具の配置シュミレーション
+カメラに写した部屋に家具を投影し、購入前に試し置きできる
+
+地図情報を表示
+GPS情報をもとに飲食店やランドマークなどの情報を付加した映像を提供する
+
+スマートグラス
+視界に付加情報を表示する
+
+美容・ファッション関係
+服や化粧品を体に反映してシミュレーションできる
+
+ゲーム
+スマートフォンのカメラが写す景色の中にゲームのキャラクタを登場させる
+
+
+**アナログ／デジタル変換(A/D変換)**  
+アナログ情報をデジタル情報に変換すること。
+通常、音声データをディジタル化する際には以下の過程を経ます。
+
+**1.標本化**  
+音の信号を一定の周期でアナログ値のまま切り出す処理。
+時間的に連続しているアナログデータを一定間隔で測定し、連続していないデータとして収集する。
+
+**2.量子化**  
+標本化で測定したデータは、アナログデータそのままの値なので小数点以下の値が存在しますが、これを最も近い整数値で近似します。
+量子化ビット数が大きいほど細かな値の変化が表現できるようになることは言うまでもありません。
+
+**3.符号化**  
+量子化で得られた数値を0または1の2進数に変換する作業です。
+
+
+
+
+800×600ピクセル，24ビットフルカラーで30フレーム／秒の動画像の配信に最小限必要な帯域幅はおよそ幾らか。ここで，通信時にデータ圧縮は行わないものとする。
+→
+応用でもあったなこれ。
+単純に全ての数字をかけ合わせればいいだけ。
+最後の単位を合わせる部分でちょっと迷う程度か。
+10^3 : k
+10^6 : M
+10^9 : G
+→
+
+``` txt
+動画像1秒あたりのデータ量を計算します。
+まず、1フレーム当たりのピクセル数を縦横の長さの積で計算します。
+　1フレーム当たりのピクセル数
+＝800×600＝480000(ピクセル)
+それぞれのピクセルが24ビットの色情報を持つので、1フレーム当たりのデータ量は次のように計算できます。
+　480000×24＝11520000＝11.52(Mビット)
+そして、1秒間の動画像は30フレームで構成されるので、1秒間のデータ量は次のように計算できます。
+　11.52MB×30フレーム＝345.6(Mビット)
+求められたデータ量を選択肢の数値と比較します。
+　35M＜345.6M＜350M
+よって動画像の配信には「350Mビット／秒」の帯域幅が必要です。
+```
+
+
+音声のサンプリングを1秒間に11,000回行い，サンプリングした値をそれぞれ8ビットのデータとして記録する。
+このとき，512×106バイトの容量をもつフラッシュメモリに記録できる音声の長さは，最大何分か。
+→
+掛けたり割ったりしてそれっぽくなっただけ。
+最初は11000を8で割ったが、情報を付加していく事を考えたら掛けるのが正解だ。
+そして、分と秒もちゃんと合わせる必要がある。
+この手の問題は単位が重要だ。
+→
+
+``` txt
+1秒間に11,000回データを取得し、1つのデータを8ビットで記録するので、1分間のデータ量は単純に、
+　11,000回×8ビット×60秒＝5,280,000ビット
+これをビット単位からバイト単位に変換すると、
+　5,280,000÷8＝660kバイト＝0.66Mバイト
+と計算することができます。
+フラッシュメモリの容量は「512×106=512Mバイト」なので、記録可能な音声の長さは、
+　512Mバイト÷0.66Mバイト≒775分
+```
+
 ---
 
 ## 1回目に間違えた問題
